platform/argocd/foundations/cef3c5bc-0d41-479a-94d7-f8fd862f2adc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc408-source-20260829114122-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: cef3c5bc-0d41-479a-94d7-f8fd862f2adc
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: baf4cf94-86ac-4e98-8e8a-36e5bc14a50e
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc408-source-20260829114122-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: cef3c5bc-0d41-479a-94d7-f8fd862f2adc
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: baf4cf94-86ac-4e98-8e8a-36e5bc14a50e
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc408-source-20260829114122-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: cef3c5bc-0d41-479a-94d7-f8fd862f2adc
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: baf4cf94-86ac-4e98-8e8a-36e5bc14a50e
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc408-source-20260829114122-dev
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: cef3c5bc-0d41-479a-94d7-f8fd862f2adc
    kuberploy.io/foundation-contract: v3
    kuberploy.io/project-id: baf4cf94-86ac-4e98-8e8a-36e5bc14a50e
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
